[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Main Menu/GUI.gd" type="Script" id=1]
[ext_resource path="res://textures/background.png" type="Texture" id=2]
[ext_resource path="res://ubuntu-font-family/UB22C3.tres" type="DynamicFont" id=3]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=4]
[ext_resource path="res://scenes/LevelSelect.tscn" type="PackedScene" id=5]
[ext_resource path="res://animations/new.tres" type="Animation" id=6]

[sub_resource type="AnimatedTexture" id=1]
frames = 4
frame_1/delay_sec = 0.0
frame_2/delay_sec = 0.0
frame_3/delay_sec = 0.0

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -39.0
margin_right = 538.0
custom_fonts/font = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.5
margin_top = -84.0
margin_right = 254.5
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play5" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 509.0
margin_bottom = 39.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "KEY_Play"
flat = true

[node name="Play8" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 43.0
margin_right = 509.0
margin_bottom = 82.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Multiplayer"
flat = true

[node name="ImportMod" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 86.0
margin_right = 509.0
margin_bottom = 125.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "KEY_MOD"
flat = true

[node name="Quit" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 129.0
margin_right = 509.0
margin_bottom = 168.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "KEY_Quit"
flat = true

[node name="LoadGame" type="Button" parent="TextureRect/VBoxContainer"]
visible = false
margin_top = 172.0
margin_right = 509.0
margin_bottom = 209.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Continue"
flat = true

[node name="LoadGame2" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 172.0
margin_right = 509.0
margin_bottom = 211.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "FAQ"
flat = true

[node name="Update" type="Button" parent="TextureRect/VBoxContainer"]
visible = false
margin_top = 172.0
margin_right = 509.0
margin_bottom = 211.0
theme = ExtResource( 4 )
text = "KEY_ONLINE_SC"
flat = true
clip_text = true

[node name="PopupPanel" type="WindowDialog" parent="TextureRect"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.68201
margin_top = 9.0
margin_right = -356.682
margin_bottom = -221.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="Button" parent="TextureRect/PopupPanel"]
anchor_bottom = 1.0
margin_right = 165.0
text = "ROBI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="Button" parent="TextureRect/PopupPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -165.0
margin_right = -6.10352e-005
margin_bottom = -3.05176e-005
text = "UFO-ROBI"
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/PopupPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -139.0
margin_right = 139.0
margin_bottom = 39.0
text = "KEY_PLAYER_SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageButton" type="OptionButton" parent="TextureRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.0
margin_top = -39.0
rect_pivot_offset = Vector2( -357.17, -267.882 )
theme = ExtResource( 4 )
text = "Language"
clip_text = true
align = 1
items = [ "English", null, false, 0, null, "Spanish", null, false, 1, null, "German", null, false, 2, null, "Polish", null, false, 3, null, "Italian", null, false, 4, null, "Portugal", null, false, 5, null, "French", null, false, 6, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModSelector" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -271.0
margin_right = 513.0
margin_bottom = 301.0
theme = ExtResource( 4 )
window_title = "Otw√≥rz plik"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.pck" )
current_dir = "C:/Users/karol/OneDrive/Dokumenty/pixel-zone-master"
current_path = "C:/Users/karol/OneDrive/Dokumenty/pixel-zone-master/"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Control" parent="." instance=ExtResource( 5 )]
visible = false
modulate = Color( 1, 1, 1, 0.166667 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/new = ExtResource( 6 )

[node name="VScrollBar" type="VScrollBar" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.166667 )
anchor_bottom = 1.0
margin_right = 12.0
[connection signal="pressed" from="TextureRect/VBoxContainer/Play5" to="." method="_on_Play5_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Play8" to="." method="_on_Play8_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ImportMod" to="." method="_on_ImportMod_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/LoadGame" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/LoadGame2" to="." method="_on_LoadGame2_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Update" to="." method="_on_Update_pressed"]
[connection signal="pressed" from="TextureRect/PopupPanel/TextureButton3" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureRect/PopupPanel/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="item_selected" from="TextureRect/LanguageButton" to="." method="_on_LanguageButton_item_selected"]
[connection signal="about_to_show" from="ModSelector" to="." method="_on_ModSelector_about_to_show"]
[connection signal="file_selected" from="ModSelector" to="." method="_on_ModSelector_file_selected"]
[connection signal="popup_hide" from="ModSelector" to="." method="_on_ModSelector_popup_hide"]
[connection signal="value_changed" from="VScrollBar" to="." method="_on_VScrollBar_value_changed"]
